--- a/index.html
+++ b/index.html
@@ -253,66 +253,68 @@
 
           <section id="sector-container" aria-labelledby="products-heading">
             <h3 id="products-heading">Products I've built</h3>
-            <div class="sector-row">
-              <div class="sector-card">Healthcare</div>
-              <div class="experience-wrapper">
-                Clinical trials participation and engagement app
+            <div id="products-container">
+              <div class="sector-row">
+                <div class="sector-card">Healthcare</div>
+                <div class="experience-wrapper">
+                  clinical trials participation and recruitment app
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Beauty & Wellness</div>
+                <div class="experience-wrapper">skincare advice chatbot</div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Fintech</div>
+                <div class="experience-wrapper">
+                  loan calculator for small businesses &bull; smart cashflow
+                  monitoring tool
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Human Resources</div>
+                <div class="experience-wrapper">
+                  ai-powered performance monitoring tool &bull; career pivoting
+                  advice and coaching platform
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Edtech</div>
+                <div class="experience-wrapper">
+                  language school management & timetabling platform
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Consumer Goods</div>
+                <div class="experience-wrapper">
+                  secondhand furniture marketplace &bull; personal aviation
+                  vehicle marketplace
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Real Estate</div>
+                <div class="experience-wrapper">
+                  landlord and tenant communications management app
+                </div>
+              </div>
+              <div class="sector-row">
+                <div class="sector-card">Social Media</div>
+                <div class="experience-wrapper">
+                  trending video/audio explorer &bull; tiktok-style social media
+                  platform for musicians &bull; freelancer job search site
+                </div>
               </div>
             </div>
-            <div class="sector-row">
-              <div class="sector-card">Beauty & Wellness</div>
-              <div class="experience-wrapper">Skincare advice chatbot</div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Fintech</div>
-              <div class="experience-wrapper">
-                Loan calculator for small businesses &bull; Cashflow monitoring
-                tool for business owners
-              </div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Human Resources</div>
-              <div class="experience-wrapper">
-                AI process insight generator &bull; Employee performance
-                monitoring tool &bull; Career pivoting advice and coaching app
-              </div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Edtech</div>
-              <div class="experience-wrapper">
-                Language school management & timetabling platform
-              </div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Consumer Goods</div>
-              <div class="experience-wrapper">
-                Secondhand furniture marketplace &bull; Personal aviation
-                vehicle marketplace
-              </div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Real Estate</div>
-              <div class="experience-wrapper">
-                Landlord and tenant communications management app
-              </div>
-            </div>
-            <div class="sector-row">
-              <div class="sector-card">Social Media</div>
-              <div class="experience-wrapper">
-                Trending video/audio explorer &bull; Tiktok-style social media
-                platform for session musicians &bull; Freelancer job search site
-              </div>
-            </div>
+
             <section id="other-work">
-              <h3 id="work-heading">Other work</h3>
+              <h3 id="work-heading">Further work</h3>
               <section class="other-experience-container">
                 <h4>Landing page design & development</h4>
                 <p>
-                  I aided to the redesign and front-end development of key
-                  sections of the company's website, focusing on enhancing user
-                  experience and optimizing layout performance. These
-                  improvements led to measurable success, indicating stronger
-                  user interest and retention and better content relevance.
+                  I contributed to the redesign and development of key sections
+                  of the company's website, focusing on enhancing UX and
+                  optimising layout performance. These improvements led to
+                  stronger user interest and better content relevance.
                 </p>
               </section>
 
@@ -337,16 +339,12 @@
               <section class="other-experience-container">
                 <h4>Internal tooling & Process improvement</h4>
                 <p>
-                  I've enjoyed leading areas of internal development which have
-                  resulted in streamlined workflows amongst the team. One of my
-                  core contributions was architecting and implementing a custom,
-                  reusable data-fetching component to be used in marketplace
-                  apps. This component not only streamlined data retrieval and
-                  display, but also introduced dynamic filtering capabilities,
-                  significantly reducing development time for similar features
-                  and enhancing the overall user experience. The solution
-                  improved cross-team collaboration and served as a template for
-                  future internal tools.
+                  One of my core contributions was architecting and implementing
+                  a custom data fetching component, which not only streamlined
+                  data retrieval and display, but also introduced dynamic
+                  filtering capabilities, significantly reducing development
+                  time. The component served as a template for future internal
+                  tools.
                 </p>
               </section>
             </section>
@@ -387,38 +385,6 @@
             </p> -->
           </section>
         </section>
-
-        <div class="contact-container">
-          <button
-            class="contact-button"
-            onclick="copyEmailToClipboard()"
-            aria-label="Contact via email or LinkedIn"
-          >
-            <span class="default-text">
-              <a href="#">Say Hello</a>
-              <i class="arrow-icon fas fa-arrow-right" aria-hidden="true"></i>
-            </span>
-            <div class="hover-content">
-              <div class="email-wrapper">
-                <span class="email-text" id="email">hello@tiahhind.com</span>
-                <span class="copy-confirmation" id="copy-confirmation"
-                  >email copied</span
-                >
-              </div>
-              <a
-                href="https://www.linkedin.com/in/tiahhind/"
-                target="_blank"
-                aria-label="Tiah Hind on LinkedIn"
-              >
-                <img
-                  src="./assets/linkedin-logo.svg"
-                  class="small-icon"
-                  alt="LinkedIn Logo"
-                />
-              </a>
-            </div>
-          </button>
-        </div>
       </div>
     </main>
 
