--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </article>
 
           <section id="sector-container" aria-labelledby="products-heading">
-            <h3 id="products-heading">Products I've built</h3>
+            <h3 id="products-heading">Some products I've built</h3>
             <div id="products-container">
               <div class="sector-row">
                 <div class="sector-card">Healthcare</div>
@@ -309,10 +309,12 @@
             <section id="other-work">
               <h3 id="work-heading">Further work</h3>
               <section class="other-experience-container">
-                <h4>Landing page design & development</h4>
+                <h4 class="other-experience-header">
+                  Landing page design & development
+                </h4>
                 <p>
                   I contributed to the redesign and development of key sections
-                  of the company's website, focusing on enhancing UX and
+                  of Verticode's website, focusing on enhancing UX and
                   optimising layout performance. These improvements led to
                   stronger user interest and better content relevance.
                 </p>
@@ -337,14 +339,13 @@
                 </div>
               </div>
               <section class="other-experience-container">
-                <h4>Internal tooling & Process improvement</h4>
+                <h4>Internal tooling & process improvement</h4>
                 <p>
-                  One of my core contributions was architecting and implementing
-                  a custom data fetching component, which not only streamlined
-                  data retrieval and display, but also introduced dynamic
-                  filtering capabilities, significantly reducing development
-                  time. The component served as a template for future internal
-                  tools.
+                  One of my core contributions was implementing a custom data
+                  fetching component, which not only streamlined data retrieval
+                  and display, but also introduced dynamic filtering
+                  capabilities, significantly reducing development time. The
+                  component also served as a template for future internal tools.
                 </p>
               </section>
             </section>
@@ -407,13 +408,7 @@
         &copy; Tiah Hind <span id="currentYear"></span>. All Rights Reserved.
       </p>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/motion@latest/dist/motion.js"></script>
     <script src="js/main.js"></script>
-    <script type="module">
-      import {
-        animate,
-        scroll,
-      } from "https://cdn.jsdelivr.net/npm/motion@latest/+esm";
-    </script>
   </body>
 </html>
