more spacing improvements, contact button optimisation

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 & iteration
               </h3>
               <p class="passion-description">
-                Building with the help of hands-on user feedback and testing
+                Developing with the help of hands-on user feedback and testing
                 ensures that products evolve meaningfully.
               </p>
             </article>
