spacing tweaks & animations wip

--- a/index.html
+++ b/index.html
@@ -410,5 +410,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/motion@latest/dist/motion.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/animations.js"></script>
   </body>
 </html>
