--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <h2 id="about-heading" class="visually-hidden">About Me</h2>
           <p>
             Specialised in the development of <b>end-to-end tech</b> for
-            <b>early-stage start ups</b>, I'm experienced in, and excited by,
+            <b>early-stage start ups</b>. I'm experienced in, and excited by,
             building products that drive <b>meaningful user adoption</b> and
             <b>retention.</b>
           </p>
