Update meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiah Hind | Software Developer | React & Node.js Specialist</title>
+    <title>Tiah Hind | Software Developer</title>
     <meta
       name="description"
-      content="Tiah Hind is a solutions-focused full stack developer specialising in building scalable web applications for startups across healthcare, fintech, and edtech sectors."
+      content="Solutions-focused full stack developer specialising in building scalable web applications for startups."
     />
     <meta
       name="keywords"
